--- a/Virtual Tourist/Storyboard/Base.lproj/Main.storyboard
+++ b/Virtual Tourist/Storyboard/Base.lproj/Main.storyboard
@@ -62,7 +62,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="136" height="142"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="placeholderImage" translatesAutoresizingMaskIntoConstraints="NO" id="WRF-iH-ed5">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WRF-iH-ed5">
                                                     <rect key="frame" x="0.0" y="0.0" width="136" height="142"/>
                                                 </imageView>
                                             </subviews>
@@ -86,6 +86,9 @@
                                 <state key="normal" title="New collection">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="newCollectionButtonPressed:" destination="EcU-rT-93e" eventType="touchUpInside" id="rH5-6r-eBd"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b6x-B2-Oou">
                                 <rect key="frame" x="20" y="0.0" width="45" height="34"/>
@@ -116,6 +119,7 @@
                     <connections>
                         <outlet property="collectionView" destination="zci-Sp-OnR" id="mhx-Na-Vhb"/>
                         <outlet property="flow" destination="ddc-Tn-Im8" id="NPs-kx-a3m"/>
+                        <outlet property="newCollectionButton" destination="qqc-vj-y81" id="JUT-Vo-0Bg"/>
                         <outlet property="okayButton" destination="b6x-B2-Oou" id="Q50-hs-9Gg"/>
                     </connections>
                 </viewController>
@@ -124,7 +128,4 @@
             <point key="canvasLocation" x="913.04347826086962" y="111.83035714285714"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="placeholderImage" width="536" height="536"/>
-    </resources>
 </document>
